--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylessheet" href="styless.css">
 </head>
 <body>
     <div class="container">
@@ -21,6 +22,9 @@
                 </figcaption>
             </figure>
         </header>
+        <div class="customsize">
+        <img src="hqdefault.jpg" class="img-fluid img-thumbnail" alt="cat">
+        </div>
     </div>
 </body>
 </html>
